@@ -84,6 +84,7 @@ public class DefaultHttpBinding implements HttpBinding {
     private boolean eagerCheckContentAvailable;
     private boolean transferException;
     private boolean muteException;
+    private boolean logException;
     private boolean allowJavaSerializedObject;
     private boolean mapHttpMessageBody = true;
     private boolean mapHttpMessageHeaders = true;
@@ -104,6 +105,7 @@ public class DefaultHttpBinding implements HttpBinding {
         this.headerFilterStrategy = endpoint.getHeaderFilterStrategy();
         this.transferException = endpoint.isTransferException();
         this.muteException = endpoint.isMuteException();
+        this.logException = endpoint.isLogException();
         if (endpoint.getComponent() != null) {
             this.allowJavaSerializedObject = endpoint.getComponent().isAllowJavaSerializedObject();
         }
@@ -197,6 +199,9 @@ public class DefaultHttpBinding implements HttpBinding {
     protected void readBody(HttpServletRequest request, Message message) {
         LOG.trace("readBody {}", request);
 
+        // Process attachments first as some servlet containers expect the body to not have been read at this point
+        populateAttachments(request, message);
+
         // lets parse the body
         Object body = message.getBody();
         // reset the stream cache if the body is the instance of StreamCache
@@ -224,8 +229,6 @@ public class DefaultHttpBinding implements HttpBinding {
                 message.setBody(null);
             }
         }
-
-        populateAttachments(request, message);
     }
 
     protected void populateRequestParameters(HttpServletRequest request, Message message) {
@@ -387,6 +390,9 @@ public class DefaultHttpBinding implements HttpBinding {
             response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
             response.setContentLength(0);
             response.setContentType("text/plain");
+            if (isLogException()) {
+                LOG.error("Server internal error response returned due to '{}'", exception.getMessage(), exception);
+            }
         } else {
             response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
 
@@ -460,7 +466,7 @@ public class DefaultHttpBinding implements HttpBinding {
         int codeToUse = currentCode == null ? defaultCode : currentCode;
 
         if (codeToUse != 500) {
-            if (body == null || body instanceof String && ((String) body).trim().isEmpty()) {
+            if (body == null || body instanceof String && ((String) body).isBlank()) {
                 // no content
                 codeToUse = currentCode == null ? 204 : currentCode;
             }
@@ -696,6 +702,16 @@ public class DefaultHttpBinding implements HttpBinding {
     @Override
     public void setMuteException(boolean muteException) {
         this.muteException = muteException;
+    }
+
+    @Override
+    public boolean isLogException() {
+        return logException;
+    }
+
+    @Override
+    public void setLogException(boolean logException) {
+        this.logException = logException;
     }
 
     @Override
